<resources>

    <!-- App related -->
    <string name="app_name">InterFON</string>
    <string name="article_loading_label">Učitavanje</string>
    <string name="share">Podeli</string>
    <string name="bookmark">Sačuvaj</string>

    <!-- Settings related -->
    <string name="notification_label">Notifikacije</string>
    <string name="single_article_heading">Sačuvani artikli</string>
    <string name="settings_activity_heading">Podešavanja</string>
    <string name="filter_title_linkInterFON">LinkInterFON</string>

    <string name="settings_activity_notifications_state">Obaveštenja:</string>
    <string name="settings_activity_mali">Mali</string>
    <string name="settings_activity_srednji">Srednji</string>
    <string name="settings_activity_veliki">Veliki</string>
    <string name="settings_activity_font">Font</string>

    <!--About us activity related -->
    <string name="about_us_activity_heading">O nama</string>
    <string name="o_nama">
        <b><font size= "20">Časopis InterFON\n\n</font></b>
        Osnovali su ga studenti Fakulteta organizacionih nauka u Beogradu sa željom da obezbede prave
        informacije potrebne studentima i time poboljšaju kvalitet studiranja u Srbiji.\n\n

        <b>Misija</b> časopisa je da pruži studentima kvalitetne, korisne i zanimljive informacije,
        da omogući članovima redakcije da uče, razvijaju se i rade u timu,
        da predstavi FON kao najbolji fakultet u Srbiji i pomogne da tako i ostane.\n\n

        <b>Vizija</b> časopisa je da bude najbolji studentski časopis u regionu koji
        ima verne čitaoce i uspešan tim koji stoji iza svega.
    </string>
    <string name="about_us_vrednosti">
        <b><font size= "20">Naše vrednosti:\n\n</font></b>
        <b>Razvoj</b> –razvijati časopis, razvijati članove redakcije i podsticati čitaoce
        da se razvijaju kako u profesionalnom smislu,tako i kao ljudi.\n\n

        <b>Neutralnost</b> – časopis je apolitična organizacija. Nama je cilj da obavestimo studente
        o različitim temama i događajima i da im pomognemo, a nikako da utičemo na njihove stavove.\n\n

        <b>Jedinstvo</b> – redakciju čini tim različitih ljudi koji su okupljeni oko iste ideje i
        koji uz pozitivnu energiju i dobre odnose rade na tome da ona bude ostvarena.\n\n

        <b>Tolerancija</b> – redakciju čine studenti koji su otvorenih shvatanja i ne dele ljude ni prema kojim kriterijumima.
        Ne podržavamo nasilje, mržnju ili bilo kakvo ugrožavanje nečijeg integriteta.\n\n

        <b>Kvalitet</b> – sve što radimo, radimo najbolje što možemo i pružamo prave informacije.\n\n

        InterFON se bavi mnogim temama značajnim i interesantnim za studente.
        Svakodnevno izlaze vesti o najboljim <b>konferencijama i seminarima</b> kako bi motivisali studente da se razvijaju,
        internacionalnim <b>razmenama i stipendijama</b>, sjajnim <b>projektima</b> u koje mogu da se uključe.\n\n

        Postoji nekoliko stalnih rubrika gde možete pročitati <b>intervjue</b> sa
        najboljim asistentima i profesorima FON-a, sa najuspešnijim studentima i
        bivšim studentima Srbije i onima koji su inostranstvu, <b>mnogo korisnih informacija</b> o FON-u,
        studiranju, kao i zanimljivih tekstova i informacija o
        tome <b>gde i kako možete provesti svoje slobodno vreme u Beogradu.</b>
        S vremena na vreme InterFON organizuje <b>nagradne igre</b> kako bi obradovao verne čitaoce.\n\n

        InterFON podržava <b>humanitarne akcije.</b>\n\n

        Promovišemo <b>sport, aktivizam</b> i <b>prave vrednosti</b> kod mladih.</string>
    <string name="about_us_redakcija">
        <b><font size= "20">Redakcija:\n\n</font></b>
        Redakcija je počela da radi <b>7. novembra 2009. godine.</b>
        U početku je časopis imao štampano izdanje, što se u međuvremenu promenilo,
        te smo sada orijentisani ka razvijanju sajta i internet promociji.
        InterFON je vodilo troje urednika, imao nekoliko štampanih izdanja i promenio je tri sajta,
        da bi se tokom svega toga razvijao i postajao sve bolji.\n\n

        Redakciju sada čini <b>tridesetak stalnih članova,</b>
        dok uz to imamo <b>članove koji nam pružaju</b> podršku kad god nam je to potrebno,
        kao i <b>veliki broj autora i dopisnika</b> sa mnogih fakulteta u Srbiji i
        nekoliko njih koji nam pišu iz inostranstva.\n\n

        Pored <b>urednika</b> i <b>zamenika</b> članovi redakcije su raspoređeni u timove.
        Tim za korporativne odnose (CR) zadužen je za ostvarivanje i
        održavanje saradnje sa kompanijama, studentskim oranizacijama i fakultetima.
        Tim za odnose sa javnošću (PR) je tu da izgradi imidž i reputaciju časopisa,
        kako putem interneta i društvenih mreža tako i u svakodnevnim interakcijama sa korisnicima.
        Tim za informacione tehnologije (IT) i tim za dizajn (D) sarađuju kako bi
        časopis imao funkcionalan i dobar sajt. Najbrojniji je tim autora i dopisnika (A&amp;R)
        koji uvek stvaraju kvalitetan sadržaj za časopis. A kao spona tu je tim za međuljudske odnose (HR)
        koji radi na tome da obezbedi najbolje ljude za redakciju i da ih motiviše da uvek mogu da budu bolji.</string>
    <string name="about_us_zakljucak">
        Zadovoljni smo onim što je do sada postignuto, s obzirom da je InterFON nastao ni iz čega
        da bi sada bio časopis koji je poznat čitavom Univerzitetu u Beogradu, a i šire,
        što nam daje motivaciju da uvek radimo više i bolje kako bismo i
        mi sami bili bolji i pružili i više od onoga što se od nas očekuje.\n\n

        Za sve one koji žele da postanu deo uspešnog i prijateljskog tima,
        za one koji žele da saznaju mnogo toga korisnog i zanimljivog,
        za sve one koji kad porastu žele da budu bolji ljudi…\n\n\n

        InterFON je tu <b>Za one koji žele više!</b></string>

    <!-- Article view related -->
    <string name="article_view_loading_article">Učitavanje članka</string>

    <!-- ContactUsActivity related -->
    <string name="contact_us_description">ŽELITE DA DATE NEKI PREDLOG ILI SUGESTIJU? IMATE PRIČU KOJU ŽELITE DA PODELITE SA NAMA? IMATE NEKO PITANJE? KONTAKTIRAJTE NAS!</string>
    <string name="contact_us_informacije">INFORMACIJE</string>
    <string name="contact_us_adress">Adresa: 154 Jove Ilića, Beograd 11000</string>
    <string name="contact_us_email">Email: info@casopisinterfon.org</string>
    <string name="contact_us_activity_heading">Kontakt</string>

    <!-- Menu Items related -->
    <string name="menu_item_opcije">Podešavanja</string>
    <string name="menu_item_o_nama">O nama</string>
    <string name="menu_item_rate">Oceni</string>
    <string name="menu_item_kontakt">Kontakt</string>
    <string name="menu_item_sacuvani_clanci">Sačuvani artikli</string>
    <string name="contact_us_posalji_mejl">Posalji nam mejl</string>
    <string name="search_title">Pretrazi</string>


</resources>
