<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_background_darker"
    >

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="14dp"
            android:text="@string/settings_activity_notifications_state" />

            <ToggleButton
                android:id="@+id/tbNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:text="ToggleButton" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/article_divider_marginBottom"
        android:layout_marginTop="@dimen/settings_activity_divider_marginTop"
        android:background="@color/article_view_divider_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/settings_activity_font" />

        <RadioGroup
            android:id="@+id/rgFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFont"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:paddingRight="@dimen/settings_activity_radio_group_padding_right">

            <RadioButton
                android:id="@+id/rbSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_activity_fon_button_margin"
                android:text="@string/settings_activity_mali" />

            <RadioButton
                android:id="@+id/rbMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_activity_fon_button_margin"
                android:text="@string/settings_activity_srednji" />

            <RadioButton
                android:id="@+id/rbLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/settings_activity_fon_button_margin"
                android:text="@string/settings_activity_veliki" />
        </RadioGroup>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/article_divider_marginBottom"
        android:layout_marginTop="@dimen/settings_activity_divider_marginTop"
        android:background="@color/article_view_divider_color" />
</LinearLayout>