<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/cardview_background"
    >


    <include layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Uvod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/about_us_text_margin"
                android:text="@string/o_nama"
                android:textAlignment="center" />
            <FrameLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/article_divider_bottom_margin"
                android:layout_marginLeft="@dimen/main_divider_margin_left"
                android:layout_marginRight="@dimen/main_divider_margin_right"
                android:background="@color/article_view_divider_color" />
            <TextView
                android:id="@+id/Vrednosti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/about_us_text_margin"
                android:text="@string/about_us_vrednosti"
                android:textAlignment="center" />
            <FrameLayout
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/article_divider_bottom_margin"
                android:layout_marginLeft="@dimen/main_divider_margin_left"
                android:layout_marginRight="@dimen/main_divider_margin_right"
                android:background="@color/article_view_divider_color" />
            <TextView
                android:id="@+id/Redakcija"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/about_us_text_margin"
                android:text="@string/about_us_redakcija"
                android:textAlignment="center" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_background_darker"
                android:orientation="vertical">
            <FrameLayout
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/article_divider_bottom_margin"
                android:background="@color/article_view_divider_color" />
            <TextView
                android:id="@+id/Zakljucak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/about_us_text_margin"
                android:text="@string/about_us_zakljucak"
                android:textAlignment="center" />

            <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/about_us_margin_bottom"
            app:srcCompat="@drawable/ic_logo" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>